# pyroll-stationary-thermal-analysis-work-roll

./: README.md  hatch.toml  pyproject.toml
docs/: docs.tex  refs.bib
pyroll/stationary_thermal_analysis_work_roll/: __init__.py  profile.py  report.py  roll.py  roll_pass.py  stationary_heat_analysis.py
tests/: test_solve.py
