[project]
name = "pyroll-stationary-thermal-analysis-work-roll" 
description = "Plugin for PyRolL providing a model to coduct a stationary heat analysis of the used work roll." 
authors = [
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause" # may be changed to your wishes
requires-python = ">=3.9, <4.0"

dependencies = [
    "pyroll-core ~= 3.0",
    "pyroll-report ~= 3.0",
    "matplotlib",
    "mpmath"
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Hatch",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Natural Language :: English",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://pyroll.readthedocs.io"

Repository = "https://github.com/pyroll-project/pyroll-stationary-thermal-analysis-work-roll"
Documentation = "https://github.com/pyroll-project/pyroll-stationary-thermal-analysis-work-roll/blob/main/docs/docs.pdf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
